--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
+    "swiper": "^11.1.14",
     "zustand": "^4.4.6"
   },
   "devDependencies": {
