--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@paypal/react-paypal-js": "^8.1.3",
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "next": "14.0.1",
     "next-auth": "^5.0.0-beta.25",
